# opm-multidomain

./: CMakeLists.txt  CMakeLists_files.cmake  dune.module  opm-multidomain-prereqs.cmake
opm/multidomain/: couplingelementcontext.hh  dualporositycoupler.hh  ecfvcouplingstencil.hh  matrixconverter.hh  multidimproperties.hh  multidomaincoupler.hh  multidomainlinearizer.hh  multidomainmapper.hh  multidomainmodel.hh  multidomainproperties.hh  multidomainsimulator.hh
opm/multidomain/utils/: multidomainstart.hh  start.hh
python/: README.md
python/benchmark_2d/: export_grid.py
python/benchmark_2d/case1/: data.py  export_grid.py
python/benchmark_2d/case3/: export_grid.py
python/benchmark_2d/case4/: export_grid.py
python/benchmark_3d/: export_grid.py
python/benchmark_3d/case1/: data.py  export_grid.py
python/benchmark_3d/case2/: data.py  export_grid.py
python/benchmark_3d/case3/: data.py  export_grid.py
python/benchmark_3d/case4/: data.py  export_grid.py  gmsh_frac_file.geo
tests/: benchmark2d.hh  benchmark3d.hh  benchmarkproperties.hh  dual_porosity.cc  fracture_benchmark_2d_1.cc  fracture_benchmark_2d_3.cc  fracture_benchmark_2d_4.cc  fracture_benchmark_3d_1.cc  fracture_benchmark_3d_2.cc  fracture_benchmark_3d_3.cc  fracture_benchmark_3d_4.cc
tests/data/: benchmark1_0.txt  benchmark1_1.txt  benchmark1_2.txt  benchmark1_mapping_0.txt  benchmark1_mapping_1.txt  benchmark1_mortar_0.txt  benchmark1_mortar_1.txt  benchmark3_0.txt  benchmark3_1.txt  benchmark3_2.txt  benchmark3_mapping_0.txt  benchmark3_mapping_1.txt  benchmark3_mortar_0.txt  benchmark3_mortar_1.txt  benchmark4_0.txt  benchmark4_1.txt  benchmark4_mapping_0.txt  benchmark4_mapping_1.txt  benchmark4_mortar_0.txt  benchmark4_mortar_1.txt  dualPorosity.txt
tests/problems/: benchmark2dproblem1.hh  benchmark2dproblem3.hh  benchmark2dproblem4.hh  benchmark3dproblem1.hh  benchmark3dproblem2.hh  benchmark3dproblem3.hh  benchmark3dproblem4.hh  co2StorageProblem.hh  darcy1PProblem.hh  darcy2PProblem.hh
